# smcgen

./: .gitignore  MAIN.bib  MAIN.tex  README.md  smcgen.cabal  stack.yaml
app/: Main.lhs
doc/: FlashModel.tex  Intro.tex  SpecTest.tex  lstprism.sty
models/: Flash.prism  Flash.props
models/init/: Flash.prism
src/: Abs1.lhs  DSL1.lhs  FlashA1.lhs  Hack.lhs  Utilities.lhs
test/: Spec.hs
